compiler/internal/frontend/testdata/parser/negative/enums.tetra
enum Option:
    case some(Int)
